add jquery + sweetalert + some components and some traits

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3280,6 +3280,9 @@ select {
 .uppercase {
   text-transform: uppercase;
 }
+.capitalize {
+  text-transform: capitalize;
+}
 .leading-5 {
   line-height: 1.25rem;
 }
