success story pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5170,6 +5170,10 @@ textarea.form-control.is-invalid {
     width: 16rem;
   }
 
+  .md\:w-3\/12 {
+    width: 25%;
+  }
+
   .md\:min-w-full {
     min-width: 100%;
   }
