vission mission pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3248,6 +3248,10 @@ textarea.form-control.is-invalid {
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -3415,6 +3419,9 @@ textarea.form-control.is-invalid {
 }
 .h-auto {
   height: auto;
+}
+.h-64 {
+  height: 16rem;
 }
 .min-h-screen {
   min-height: 100vh;
