some form bugs + whitespacenowrap in index and show view crud

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3221,6 +3221,9 @@ textarea.form-control.is-invalid {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.whitespace-nowrap {
+  white-space: nowrap;
+}
 .break-words {
   overflow-wrap: break-word;
 }
