--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,57 +1,1 @@
-.lds-circle {
-    display: inline-block;
-    transform: translateZ(1px);
-}
-
-.lds-circle>div {
-    display: inline-block;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border-radius: 50%;
-    background: #fff;
-    -webkit-animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-            animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-
-@-webkit-keyframes lds-circle {
-    0%, 100% {
-        -webkit-animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
-                animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
-    }
-
-    0% {
-        transform: rotateY(0deg);
-    }
-
-    50% {
-        transform: rotateY(1800deg);
-        -webkit-animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-                animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-    }
-
-    100% {
-        transform: rotateY(3600deg);
-    }
-}
-
-@keyframes lds-circle {
-    0%, 100% {
-        -webkit-animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
-                animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
-    }
-
-    0% {
-        transform: rotateY(0deg);
-    }
-
-    50% {
-        transform: rotateY(1800deg);
-        -webkit-animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-                animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-    }
-
-    100% {
-        transform: rotateY(3600deg);
-    }
-}
+.lds-circle{display:inline-block;transform:translateZ(1px)}.lds-circle>div{-webkit-animation:lds-circle 2.4s cubic-bezier(0,.2,.8,1) infinite;animation:lds-circle 2.4s cubic-bezier(0,.2,.8,1) infinite;background:#fff;border-radius:50%;display:inline-block;height:64px;margin:8px;width:64px}@-webkit-keyframes lds-circle{0%,to{-webkit-animation-timing-function:cubic-bezier(.5,0,1,.5);animation-timing-function:cubic-bezier(.5,0,1,.5)}0%{transform:rotateY(0deg)}50%{-webkit-animation-timing-function:cubic-bezier(0,.5,.5,1);animation-timing-function:cubic-bezier(0,.5,.5,1);transform:rotateY(5turn)}to{transform:rotateY(10turn)}}@keyframes lds-circle{0%,to{-webkit-animation-timing-function:cubic-bezier(.5,0,1,.5);animation-timing-function:cubic-bezier(.5,0,1,.5)}0%{transform:rotateY(0deg)}50%{-webkit-animation-timing-function:cubic-bezier(0,.5,.5,1);animation-timing-function:cubic-bezier(0,.5,.5,1);transform:rotateY(5turn)}to{transform:rotateY(10turn)}}
