--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,2 @@
 @import url(https://fonts.googleapis.com/css2?family=Nunito&display=swap);
-body {
-    font-family: 'Nunito', sans-serif;
-}
+body{font-family:Nunito,sans-serif}
